fix: scrollbar -> 10px

--- a/css/styles.css
+++ b/css/styles.css
@@ -218,13 +218,13 @@ button {
 }
 
 ::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
+  width: 10px;
+  height: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: var(--border);
-  border-radius: 4px;
+  border-radius: 5px;
 }
 
 .dark ::-webkit-scrollbar-thumb {
